<resources>
    <string name="app_name">Momento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">splash</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="dots">- - - - -</string>
    <string name="first_text">Connect with Friends \nand Family</string>
    <string name="first_dis">Connecting with Family and Friends \nprovides a sense of belonging and \nsecurity</string>

    <string name="second_text">Make new friends \nwith ease</string>
    <string name="second_dis">Allowing you to make new Friends is \nour Number one priority.....</string>
    <string name="third_text">Express yourself to \nthe world</string>
    <string name="third_dis">Let your voice be heard on the internet \nthrough the OFOFO features on the App \nwithout restrictions</string>
    <string name="note">Note: Our authentication is done via a browser because the api does not provide it.</string>
    <string name="sign_in">Sign In</string>
    <string name="line">________</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sing_up">Sing Up</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="trending_tags">Trending tags</string>
    <string name="category">Category</string>
    <string name="verify_number_tv">Please Enter Your Number To Verify Your Account</string>
    <string name="verify_otp_tv">Please Enter The Verification Code</string>
    <string name="verify_number_bold_tv">Verify Your Number</string>
    <string name="verify_otp_bold_tv">Verification Code</string>
    <string name="_1">+1</string>
    <string name="number">Number..</string>
    <string name="code">code..</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="create_account">Create Account</string>
    <string name="please_enter_your_name">please enter your name</string>
    <string name="name">name…</string>
    <string name="about_you">About You</string>
    <string name="status">Status</string>
    <string name="posts">Posts</string>
    <string name="create">Create</string>
    <string name="helloMessage">Hello: %1$s</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="you">You</string>
    <string name="profile">Profile</string>
    <string name="Profile_name">Name</string>
    <string name="this_name_will_be_visible_to_your_friends">This name will be visible to your friends</string>
    <string name="phone">Phone</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="add_about">Add about</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="create_post">Create post</string>
    <string name="post">Post</string>
    <string name="photo">Photo</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="continue_tv">Continue</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="postsLikesCount">Liked by %1$s and %2$d others</string>
    <string name="select_image">Select Image</string>
    <string name="add_caption">Add caption</string>
    <string name="upload">Upload</string>
    <string name="num_posts">%1$d\nPosts</string>
    <string name="num_following">%1$d\nFollowing</string>
    <string name="num_followers">%1$d\nFollowers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="follow">follow</string>
    <string name="numLikes">%1$d</string>
</resources>