<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content">    <TextView        android:id="@+id/enterAboutTv"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/add_about"        android:textColor="@color/black"        android:textSize="20sp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <EditText        android:id="@+id/enterAboutEt"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:backgroundTint="@color/black"        android:selectAllOnFocus="true"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/enterAboutTv"        tools:text="@string/status" />    <TextView        android:id="@+id/saveTv"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:padding="8dp"        android:text="@string/save"        android:textColor="@color/black"        android:textSize="22sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/enterAboutEt" />    <TextView        android:id="@+id/cancel"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:layout_marginEnd="15dp"        android:padding="8dp"        android:text="@string/cancel"        android:textColor="@color/black"        android:textSize="22sp"        app:layout_constraintEnd_toStartOf="@+id/saveTv"        app:layout_constraintTop_toBottomOf="@+id/enterAboutEt" /></androidx.constraintlayout.widget.ConstraintLayout>