<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@drawable/dialog_bg">    <TextView        android:id="@+id/createTv"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="50dp"        android:text="@string/create_account"        android:textColor="@color/onBoardingBgColor"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <com.google.android.material.imageview.ShapeableImageView        android:id="@+id/profileIV"        android:layout_width="200dp"        android:layout_height="200dp"        android:layout_marginTop="30dp"        android:scaleType="centerCrop"        android:src="@drawable/create_account"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/createTv"        app:shapeAppearanceOverlay="@style/roundedImg" />    <TextView        android:id="@+id/createNameTv"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="15dp"        android:text="@string/please_enter_your_name"        android:textColor="@color/dots"        android:textSize="16sp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/profileIV" />    <EditText        android:id="@+id/createNameEt"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="10dp"        android:layout_weight="1"        android:background="@drawable/verify_number_et"        android:hint="@string/name"        android:inputType="textPersonName"        android:padding="15dp"        android:textColor="@color/dots"        android:textColorHint="@color/dots"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/createNameTv"        tools:layout_editor_absoluteY="10dp" />    <TextView        android:id="@+id/createAboutYouTv"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="15dp"        android:text="@string/about_you"        android:textColor="@color/dots"        android:textSize="16sp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/createNameEt" />    <EditText        android:id="@+id/createAboutYouEt"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="10dp"        android:layout_weight="1"        android:background="@drawable/verify_number_et"        android:hint="@string/status"        android:inputType="text"        android:padding="15dp"        android:textColor="@color/dots"        android:textColorHint="@color/dots"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/createAboutYouTv"        tools:layout_editor_absoluteY="10dp" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/createBtn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginHorizontal="5dp"        android:layout_marginTop="25dp"        android:background="@drawable/sent_btn"        android:text="@string/create"        android:textAllCaps="false"        android:textColor="@color/white"        android:textSize="20sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/createAboutYouEt" />    <ProgressBar        android:id="@+id/progressBar"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="10dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/createBtn" /></androidx.constraintlayout.widget.ConstraintLayout>