<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".ui.auth.SendOtpFragment">

    <ImageView
        android:id="@+id/verifyNumberIv"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/verify_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verifyNumberBoldTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:paddingHorizontal="7dp"
        android:text="@string/verify_number_bold_tv"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyNumberIv" />


    <TextView
        android:id="@+id/verifyNumberTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingHorizontal="6dp"
        android:text="@string/verify_number_tv"
        android:textColor="@color/onPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyNumberBoldTv" />

    <LinearLayout
        android:id="@+id/verifyNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyNumberTv">


        <EditText
            android:id="@+id/countryNumber"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/primary_container"
            android:hint="@string/_1"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/dots"
            android:textColorHint="@color/dots"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/numberEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/primary_container"
            android:hint="@string/number"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/dots"
            android:textColorHint="@color/dots" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/primary_button"
        android:text="@string/send"
        android:fontFamily="@font/poppins_semi_bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyNumberLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>