<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.onboarding.OnBoardingFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onBoardingPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/onBoardingNextTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/onBoardingNextTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:paddingVertical="11dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onBoardingContinueTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:paddingVertical="11dp"
        android:text="@string/continue_tv"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onBoardingSkipTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/primary_text_view"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:paddingVertical="11dp"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingNextTv" />


</androidx.constraintlayout.widget.ConstraintLayout>